# krunner-switcher

./: CMakeLists.txt  Messages.sh  README  README.md  install.sh
src/: CMakeLists.txt  plasma-runner-switcher.desktop  switcher.cpp  switcher.h
